포트폴리오 정리, 주소/이메일 표시 부분 정리

--- a/index.html
+++ b/index.html
@@ -1240,10 +1240,10 @@
                                 </div>
                                 <div class="textwidget">
                                     <p>
-                                        Office: 5F, 17-9, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
+                                        5F, 17-9, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
                                         / 02751
                                         <hr>
-                                        E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>                                        
+                                        <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>                                        
                                         <select id="selSites" class="select"
                                             style="background-color: #333; color: #aaa; border-color: #888;"
                                             onChange="changedSelector">
@@ -1297,45 +1297,50 @@
                                     <h6>Portfolio</h6>
                                 </div>
                                 <ul>
+                                    <li><a href="https://aplx.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><img src="assets/images/widgets/7.png" alt="APLX"
+                                            style="width:45px;"></a></li>
+                                    <li><a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                            target=_new><img src="assets/images/widgets/6.png" alt="캐치미"
+                                                style="width:45px;"></a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="https://dkdk.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><img src="assets/images/widgets/1.png" alt="두근두근"
+                                            style="width:45px;"></a></li>                                                                      
+                                </ul>                                
+                                <ul>
                                     <li><a href="https://duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="assets/images/widgets/4.png" alt="DUNI"
-                                                style="width:45px"><br>
-                                            <div class="widget-title">
-                                                <H6>DRONE SERVICE</H6>
-                                            </div>
-                                        </a></li>
+                                        target=_new><img src="assets/images/widgets/4.png" alt="DUNI"
+                                            style="width:45px"><br>
+                                        <div class="widget-title">
+                                            <H6>DRONE SERVICE</H6>
+                                        </div>
+                                    </a></li>
                                     <li><a href="https://pilot.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="assets/images/widgets/4.png" alt="DUNI"
-                                                style="width:45px"><br>
-                                            <div class="widget-title">
-                                                <H6>PILOT CENTER</H6>
-                                            </div>
-                                        </a></li>
+                                        target=_new><img src="assets/images/widgets/4.png" alt="DUNI"
+                                            style="width:45px"><br>
+                                        <div class="widget-title">
+                                            <H6>PILOT CENTER</H6>
+                                        </div>
+                                    </a></li>                                    
                                 </ul>
                                 <ul>
                                     <li><a href="https://developer.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="assets/images/widgets/4.png" alt="DUNI"
-                                                style="width:45px"><br>
-                                            <div class="widget-title">
-                                                <H6>SW DEVELOPER</H6>
-                                            </div>
-                                        </a></li>
-                                    <li><a href="https://dkdk.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="assets/images/widgets/1.png" alt="두근두근"
-                                                style="width:65px;"></a></li>
-                                </ul>
-                                <ul>
+                                        target=_new><img src="assets/images/widgets/4.png" alt="DUNI"
+                                            style="width:45px"><br>
+                                        <div class="widget-title">
+                                            <H6>SW DEVELOPER</H6>
+                                        </div>
+                                    </a></li>
                                     <li><a href="https://dromi.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
                                             target=_new><img src="assets/images/widgets/3.png" alt="드로미"
-                                                style="width:53px;"></a></li>
-                                    <li><a href="https://drdr.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="assets/images/widgets/2.png" alt="두런두런"
-                                                style="width:65px;"></a></li>
+                                                style="width:45px;"></a></li>                                    
                                 </ul>
                                 <ul>
-                                    <li><a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="assets/images/widgets/6.png" alt="캐치미"
-                                                style="width:53px;"></a></li>
+                                    <li><a href="https://drdr.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><img src="assets/images/widgets/2.png" alt="두런두런"
+                                            style="width:45px;"></a></li>
                                 </ul>
                             </aside>
                         </div>
