--- a/index.html
+++ b/index.html
@@ -1278,6 +1278,7 @@
                                             <div colorscheme="dark" class="fb-like"
                                                 data-href="https://facebook.com/aplyplatform" data-layout="standard"
                                                 data-action="like" data-size="small" data-show-faces="true"
+                                                data-width="225"
                                                 data-share="false"></div>
                                         </li>
                                     </ul>
