--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description" content="즐겁게 일하기 위한 진보된 플랫폼">
     <meta name="twitter:title" content="APLY Inc. | Advanced platform to fly">
-    <meta name="twitter:image" content="https://www.aply.biz/assets/images/site_title.png">
+    <meta name="twitter:image" content="https://home.aply.biz/assets/images/site_title.png">
 
     <meta property="analytics-track" content="APLY Inc." />
     <meta property="analytics-s-channel" content="APLY" />
@@ -33,22 +33,22 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:title" content="어플라이 | APLY Inc. - Advanced platform to fly" />
-    <meta property="og:image" content="https://www.aply.biz/assets/images/site_title.png" />
-    <meta property="og:url" content="https://www.aply.biz" />
+    <meta property="og:image" content="https://home.aply.biz/assets/images/site_title.png" />
+    <meta property="og:url" content="https://home.aply.biz" />
     <meta property="og:description" content="즐겁게 일하기 위한 진보된 플랫폼을 만나보세요!" />
 
     <meta itemprop="name" content="APLY">
-    <meta itemprop="image" content="https://www.aply.biz/assets/images/site_title.png">
+    <meta itemprop="image" content="https://home.aply.biz/assets/images/site_title.png">
     <meta itemprop="description"
         content="즐겁게 일하기 위한 진보된 플랫폼을 만나보세요!">
     <meta itemprop="keywords"
         content="AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, data, bigdata, AI, 드론, 감성, 서비스, 소프트웨어, sw">
-    <meta itemprop="url" content="https://www.aply.biz/">
+    <meta itemprop="url" content="https://home.aply.biz/">
 
     <!-- Favicons-->
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <link rel="alternate" href="https://www.aply.biz/" hreflang="x-default">
-    <link rel="canonical" href="https://www.aply.biz/">
+    <link rel="alternate" href="https://home.aply.biz/" hreflang="x-default">
+    <link rel="canonical" href="https://home.aply.biz/">
 
     <!-- Web Fonts-->
     <link
