--- a/recruit/index.html
+++ b/recruit/index.html
@@ -20,32 +20,32 @@
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:title" content="어플라이 | APLY - Advanced platform to fly" />
-    <meta property="og:image" content="https://www.aply.biz/assets/images/site_title.png" />
-    <meta property="og:url" content="https://www.aply.biz" />
+    <meta property="og:image" content="https://home.aply.biz/assets/images/site_title.png" />
+    <meta property="og:url" content="https://home.aply.biz" />
     <meta property="og:site_name" content="APLY" />
-    <meta property="og:description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요!" />
+    <meta property="og:description" content="즐겁게 일하기 위한 진보된 플랫폼을 만나보세요!" />
     <title>채용공고 - 주식회사 어플라이 | APLY - Advanced platform to fly</title>
     <meta name="keywords"
         content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
-    <meta name="description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
+    <meta name="description" content="즐겁게 일하기 위한 진보된 플랫폼">
     <meta itemprop="description"
         content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
     <meta itemprop="keywords"
         content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
 
-    <meta property="og:description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
-    <meta name="twitter:description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
+    <meta property="og:description" content="즐겁게 일하기 위한 진보된 플랫폼">
+    <meta name="twitter:description" content="즐겁게 일하기 위한 진보된 플랫폼">
     <meta itemprop="name" content="어플라이 | APLY - Advanced platform to fly">
     <meta property="og:title" content="어플라이 | APLY - Advanced platform to fly">
     <meta name="twitter:title" content="어플라이 | APLY - Advanced platform to fly">
 
-    <meta itemprop="image" content="https://www.aply.biz/assets/images/site_title.png">
-    <meta property="og:image" content="https://www.aply.biz/assets/images/site_title.png">
-    <meta name="twitter:image" content="https://www.aply.biz/assets/images/site_title.png">
+    <meta itemprop="image" content="https://home.aply.biz/assets/images/site_title.png">
+    <meta property="og:image" content="https://home.aply.biz/assets/images/site_title.png">
+    <meta name="twitter:image" content="https://home.aply.biz/assets/images/site_title.png">
 
-    <link rel="alternate" href="https://www.aply.biz/" hreflang="x-default">
-    <link rel="canonical" href="https://www.aply.biz/">
-    <meta itemprop="url" content="https://www.aply.biz/">
+    <link rel="alternate" href="https://home.aply.biz/" hreflang="x-default">
+    <link rel="canonical" href="https://home.aply.biz/">
+    <meta itemprop="url" content="https://home.aply.biz/">
     <!-- Favicons-->
     <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
 
