--- a/symbol/index.html
+++ b/symbol/index.html
@@ -20,33 +20,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords"
         content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
-    <meta name="description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
+    <meta name="description" content="즐겁게 일하기 위한 진보된 플랫폼">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
+    <meta name="twitter:description" content="즐겁게 일하기 위한 진보된 플랫폼">
     <meta name="twitter:title" content="어플라이 | APLY - Advanced platform to fly">
-    <meta name="twitter:image" content="https://www.aply.biz/assets/images/site_title.png">
+    <meta name="twitter:image" content="https://home.aply.biz/assets/images/site_title.png">
 
     <meta property="og:site_name" content="어플라이 | APLY - Advanced platform to fly">
     <meta property="og:type" content="website">
     <meta property="og:title" content="어플라이 | APLY - Advanced platform to fly" />
-    <meta property="og:image" content="https://www.aply.biz/assets/images/site_title.png" />
-    <meta property="og:url" content="https://www.aply.biz" />
+    <meta property="og:image" content="https://home.aply.biz/assets/images/site_title.png" />
+    <meta property="og:url" content="https://home.aply.biz" />
     <meta property="og:site_name" content="APLY" />
     <meta property="og:description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요!" />
     <meta property="og:description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
 
     <meta itemprop="name" content="어플라이 | APLY - Advanced platform to fly">
-    <meta itemprop="image" content="https://www.aply.biz/assets/images/site_title.png">
+    <meta itemprop="image" content="https://home.aply.biz/assets/images/site_title.png">
     <meta itemprop="description"
         content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
     <meta itemprop="keywords"
         content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
-    <meta itemprop="url" content="https://www.aply.biz/">
+    <meta itemprop="url" content="https://home.aply.biz/">
 
     <!-- Favicons-->
     <link rel="shortcut icon" href="https://home.aply.biz/assets/images/favicon.ico" type="image/x-icon">
-    <link rel="alternate" href="https://www.aply.biz/" hreflang="x-default">
-    <link rel="canonical" href="https://www.aply.biz/">
+    <link rel="alternate" href="https://home.aply.biz/" hreflang="x-default">
+    <link rel="canonical" href="https://home.aply.biz/">
 
     <!-- Web Fonts-->
     <link
@@ -152,9 +152,8 @@
                                 <div class="collapse show" id="collapse-3" data-parent="#accordion3">
                                     <div class="accordion-item-body">                                        
                                         <p>- 즐겁게 일하기 위한 진보된 플랫폼</p>
-                                        <p>- 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다</p>
-                                        <p>- 보다 진보된 기술로 쉽고 안전한 드론 서비스를 연구/개발합니다</p>
-                                        <p>- APLX : 증강현실 기반 홍보 솔루션</p>
+                                        <p>- 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다</p>                                        
+                                        <p>- APLX : 증강현실 기반 전시/홍보/커뮤니케이션 플랫폼</p>
                                         <p>- APLX : THE PATH TO THE NEXT</p>
                                     </div>
                                 </div>
@@ -178,8 +177,8 @@
                                 </div>
                                 <div class="collapse show" id="collapse-3" data-parent="#accordion3">
                                     <div class="accordion-item-body">
-                                        <p>- 소개:<BR>보다 진보된 기술로 쉽고 안전한 드론 서비스를 연구/개발하는 스타트업 입니다</p>
-                                        <p>- 주요 제품 및 서비스:<BR>드론 SW 및 데이터 서비스 플랫폼</p>
+                                        <p>- 소개:<BR>보다 진보된 기술로 증강현실 기반 전시/홍보/커뮤니케이션 플랫폼을 연구/개발하는 스타트업 입니다</p>
+                                        <p>- 주요 제품 및 서비스:<BR>증강현실 기반 전시/홍보/커뮤니케이션 플랫폼</p>
                                     </div>
                                 </div>
                             </div>
@@ -203,8 +202,7 @@
                                 <div class="collapse show" id="collapse-5" data-parent="#accordion5">
                                     <div class="accordion-item-body">
                                         <p>
-                                            드론 서비스 기업이 요구하는 SW를 제공합니다. 전문가 기술을 연결하여 드론 서비스 기업들이 다양한 수요에 대응할 수 있고 수익을 창출
-                                            할 수 있으며 역량 강화 및 성장을 돕는 빅데이터, AI, AR 기반의 기술 연결 및 데이터 서비스 플랫폼을 개발합니다.
+                                            ICT 기술에 익숙하지 않아도 증강현실 기반의 새로운 홍보 기술을 활용할 수 있도록 돕습니다.
                                         </p>
                                     </div>
                                 </div>
@@ -226,6 +224,11 @@
                                     <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-4">서비스</a></h6>
                                 </div>
                                 <div class="collapse show" id="collapse-4" data-parent="#accordion4">
+                                    <div class="accordion-item-body">
+                                        <p>- <a href="https://aplx.aply.biz">어플엑스(APLX)</a> : 증강현실 기반 전시/홍보/커뮤니케이션 플랫폼<br>
+                                            ICT 기술에 익숙하지 않아도 증강현실 기반의 새로운 홍보 기술을 활용할 수 있도록 돕는 플랫폼</p>
+                                    </div>
+
                                     <div class="accordion-item-body">
                                         <p>- <a href="https://duni.io">두니(DUNI)</a> : 드론 서비스 수요 중개 플랫폼<br>
                                             드론 서비스 기업들에게 다양한 드론 서비스 수요를 연결하는 플랫폼</p>
@@ -303,8 +306,8 @@
                                 </div>
                                 <div class="collapse show" id="collapse-6" data-parent="#accordion6">
                                     <div class="accordion-item-body">
-                                        <p>- 본사 한글: 02751 / 서울특별시 성북구 화랑로11길 17-5 5층 주식회사 어플라이</p>
-                                        <p>- 본사 영문: 02751 / APLY Inc. / 5F, 17-5, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea</p>
+                                        <p>- 본사 한글: 02751 / 서울특별시 성북구 화랑로11길 17-9 5층 주식회사 어플라이</p>
+                                        <p>- 본사 영문: 02751 / APLY Inc. / 5F, 17-9, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea</p>
                                         </p>
                                     </div>
                                 </div>
@@ -486,12 +489,12 @@
                                     </a>
                                 </div>
                                 <div class="textwidget">
-                                    <p>즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
+                                    <p>즐겁게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                     <p>
-                                        Office: 5F, 17-5, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
+                                        Office: 5F, 17-9, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
                                         / 02751
                                         <hr>
-                                        E-mail: <a href=mailto:contactus@aply.biz>recruit@aply.biz</a><br>
+                                        E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
                                         Phone: +82-2-6956-0801
                                     </p>
                                     <ul class="social-icons">
