블로그 주소 > 제프로 블로그로 변경

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </li>
                         <li><a href="#section-location"><span class="menu-item-span">LOCATION</span></a>
                         </li>
-                        <li><a href="https://blog.naver.com/duniplatform" target="new"><span
+                        <li><a href="https://blog.naver.com/PostList.naver?blogId=jebo78&categoryNo=38&from=postList" target="_blank"><span
                                     class="menu-item-span">BLOG</span></a>
                         </li>
                         <li><a href="/recruit/index.html"><span class="menu-item-span">RECRUIT</span></a>
