페이지 문구 수정

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             <div class="icon-box-icon"><img src="assets/images/widgets/7.png" border=0></div>
                             <div class="feature-content">
                                 <h6>어플엑스 (APLX)</h6>
-                                <p>증강현실 기반 홍보 솔루션</p>
+                                <p>증강현실 기반 홍보/전시/커뮤니케이션 플랫폼</p>
                                 <p>
                                     <a href="https://aplx.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
                                         target="new"><i class="ti-link"></i></a>                                    
@@ -1287,7 +1287,7 @@
                                             <div colorscheme="dark" class="fb-like"
                                                 data-href="https://facebook.com/aplyplatform" data-layout="standard"
                                                 data-action="like" data-size="small" data-show-faces="true"
-                                                data-width="260"
+                                                data-width="280"
                                                 data-share="false"></div>
                                         </li>
                                     </ul>
