--- a/recruit/index.html
+++ b/recruit/index.html
@@ -108,7 +108,7 @@
                         </li>
                         <li><a href="../index.html#section-location"><span class="menu-item-span">LOCATION</span></a>
                         </li>
-                        <li><a href="https://blog.naver.com/duniplatform" target="new"><span
+                        <li><a href="https://blog.naver.com/PostList.naver?blogId=jebo78&categoryNo=38&from=postList" target="_blank"><span
                                     class="menu-item-span">BLOG</span></a>
                         </li>
                         <li><a href="/recruit/index.html"><span class="menu-item-span">RECRUIT</span></a>
@@ -470,7 +470,7 @@
                                     </a>
                                 </div>
                                 <div class="textwidget">
-                                    <p>재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
+                                    <p>즐겁게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                     <p>
                                         Office: 5F, 17-9, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
                                         / 02751
@@ -485,6 +485,7 @@
                                             <option value="kiosk">R&D KIOSK</option>
                                             <option value="polaris">POLARIS</option>
                                             <option value="catchme">CATCHME</option>
+                                            <!--
                                             <option value="dkdk">DKDK</option>
                                             <option>-------------------------------------</option>
                                             <option value="duni">DUNI</option>
@@ -492,8 +493,9 @@
                                             <option value="dunistock">DUNI STOCK</option>
                                             <option value="dromi">DROMI</option>
                                             <option value="drdr">DRDR</option>
-                                            <option>-------------------------------------</option>
+                                            <option>-------------------------------------</option>                                            
                                             <option value="blog">BLOG</option>
+                                            -->
                                         </select>
                                     </p>
                                     <ul class="social-icons">
@@ -501,14 +503,14 @@
                                                     class="fab fa-instagram"></i></a></li>
                                         <li><a href="https://www.facebook.com/APLYPLATFORM"><i
                                                     class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="https://blog.naver.com/duniplatform"><span class="ti-rss"></a></li>
+                                        <li><a href="https://blog.naver.com/PostList.naver?blogId=jebo78&categoryNo=38&from=postList"><span class="ti-rss"></a></li>
                                         <li><a href="https://kr.linkedin.com/company/aplyplatform"><i
                                                     class="fab fa-linkedin"></i></a></li>
                                         <li>
                                             <div colorscheme="dark" class="fb-like"
                                                 data-href="https://facebook.com/aplyplatform" data-layout="standard"
                                                 data-action="like" data-size="small" data-show-faces="true"
-                                                data-width="260"
+                                                data-width="280"
                                                 data-share="false"></div>
                                         </li>
                                     </ul>
@@ -528,40 +530,18 @@
                                     <h6>Portfolio</h6>
                                 </div>
                                 <ul>
-                                    <li><a href="https://duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="/assets/images/widgets/4.png" alt="DUNI"
-                                                style="width:45px"><br>
-                                            <div class="widget-title">
-                                                <H6>DRONE SERVICE</H6>
-                                            </div>
-                                        </a></li>
-                                    <li><a href="https://pilot.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="/assets/images/widgets/4.png" alt="DUNI"
-                                                style="width:45px"><br>
-                                            <div class="widget-title">
-                                                <H6>PILOT CENTER</H6>
-                                            </div>
-                                        </a></li>
+                                    <li><a href="https://aplx.aply.biz/?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><img src="../assets/images/widgets/7.png" alt="APLX"
+                                            style="width:45px;"></a></li>
+                                    <li><a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                            target=_new><B>R&D KIOSK</B></a></li>
                                 </ul>
                                 <ul>
-                                    <li><a href="https://developer.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="/assets/images/widgets/4.png" alt="DUNI"
-                                                style="width:45px"><br>
-                                            <div class="widget-title">
-                                                <H6>SW DEVELOPER</H6>
-                                            </div>
-                                        </a></li>
-                                    <li><a href="https://dkdk.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="/assets/images/widgets/1.png" alt="두근두근"
-                                                style="width:65px;"></a></li>
-                                </ul>
-                                <ul>
-                                    <li><a href="https://dromi.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="/assets/images/widgets/3.png" alt="드로미"
-                                                style="width:53px;"></a></li>
-                                    <li><a href="https://drdr.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="/assets/images/widgets/2.png" alt="두런두런"
-                                                style="width:65px;"></a></li>
+                                    <li><a href="https://polaris.aply.biz?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new>P O L A R I S</a></li>
+                                    <li><a href="https://catchme.aply.biz/?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><img src="../assets/images/widgets/6.png" alt="캐치미"
+                                            style="width:45px;"></a></li>
                                 </ul>
                             </aside>
                         </div>
