--- a/index.html
+++ b/index.html
@@ -239,8 +239,21 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12 m-auto text-center">
                         <h3>APLY 서비스<span class="blinking-cursor">_</span></h3>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/widgets/9.png" border=0></div>
+                            <div class="feature-content">
+                                <h6>AQR (Advanced QR)</h6>
+                                <p>앱설치와 수수료가 없는 간편 송금 지원 서비스</p>
+                                <p>
+                                    <a href="https://aplx.aply.biz/aqr?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
+                                        target="new"><i class="ti-link"></i></a>                                    
+                                </p>
+                            </div>
+                        </div>
                     </div>                    
-                    
 
                     <div class="col-lg-6 col-md-6">
                         <div class="icon-box icon-box-left">
@@ -1256,8 +1269,9 @@
                                             <option>-------------------------------------</option>
                                             <option value="recruit">RECRUIT</option>
                                             <option value="blog">BLOG</option>
-                                            <option>-------------------------------------</option>                                            
-                                            <option value="aplx">APLX</option>                                            
+                                            <option>-------------------------------------</option>
+                                            <option value="aqr">AQR</option>
+                                            <option value="aplx">APLX</option>
                                             <option value="kiosk">R&D KIOSK</option>
                                             <option value="polaris">POLARIS</option>
                                             <option value="catchme">CATCHME</option>
@@ -1310,12 +1324,13 @@
                                     <li><a href="https://aplx.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
                                         target=_new><img src="assets/images/widgets/7.png" alt="APLX"
                                             style="width:45px;"></a></li>
-                                    <li><a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><B>R&D KIOSK</B></a></li>
+                                    <li><a href="https://aplx.aply.biz/aqr?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><img src="assets/images/widgets/9.png" alt="APLX"
+                                            style="width:45px;"></a></li>                                    
                                 </ul>
                                 <ul>
-                                    <li><a href="https://polaris.aply.biz?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target=_new>P O L A R I S</a></li>
+                                    <li><a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><B>R&D KIOSK</B></a></li>                                    
                                     <li><a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
                                         target=_new><img src="assets/images/widgets/6.png" alt="캐치미"
                                             style="width:45px;"></a></li>
