APLX, AQR, KIMUSTUIO 관련 내용 추가

--- a/index.html
+++ b/index.html
@@ -517,6 +517,58 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                             <div class="icon-box-title">
+                                <h6>2022-12</h6>
+                            </div>
+                            <div class="icon-box-content">
+                                <p>(주)키뮤 '서울 디자인 페스티벌' 전시 작품 대상 APLX 적용
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                            <div class="icon-box-title">
+                                <h6>2022-11</h6>
+                            </div>
+                            <div class="icon-box-content">
+                                <p>간편 송금 지원 서비스 'AQR' 론칭
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                            <div class="icon-box-title">
+                                <h6>2022-10</h6>
+                            </div>
+                            <div class="icon-box-content">
+                                <p>김미경 작가 전시회 '산이 보이네'전 대상 APLX 적용
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                            <div class="icon-box-title">
+                                <h6>2022-08</h6>
+                            </div>
+                            <div class="icon-box-content">
+                                <p>정은혜 작가 전시회 '포옹'전 대상 APLX 적용
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                            <div class="icon-box-title">
                                 <h6>2022-05</h6>
                             </div>
                             <div class="icon-box-content">
@@ -920,6 +972,14 @@
                 </div>
 
                 <div class="row">
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-title">
+                                <p><a href="https://www.kimustudio.com/" target=new>(주)키뮤스튜디오</a></p>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
