--- a/index.html
+++ b/index.html
@@ -1287,7 +1287,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h4>Location<span class="blinking-cursor">_</span></h4>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12643.838302172311!2d127.0410615!3d37.6031104!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x618142d4f5808743!2z6rO16rCE7Y-0652866as7Iqk!5e0!3m2!1sko!2skr!4v1646202636798!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d197.16406501490306!2d126.76789609132942!3d37.75193997258904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c8de5a3605b8f%3A0x2e35168624ee623a!2z67O0656M7ZSE65287J6Q!5e0!3m2!1sko!2skr!4v1672539521417!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""
                         aria-hidden="false" tabindex="0" loading="lazy"></iframe>
                     </div>
                 </div>
@@ -1318,7 +1318,7 @@
                                 </div>
                                 <div class="textwidget">
                                     <p>
-                                        5F, 17-9, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
+                                        6F, 24-21, Geumbit-ro, Paju-si, Gyeonggi-do, Republic of Korea
                                         / 02751
                                         <hr>
                                         <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>                                        
