--- a/recruit/index.html
+++ b/recruit/index.html
@@ -166,13 +166,7 @@
                         <span class="word">지금은 채용기간이 아닙니다.</span><br>
                         <!-- <span class="word"><a href=mailto:recruit@aply.biz>recruit@aply.biz</a></span> -->
                     </h4>
-                </div>
-
-                <div class="col-md-12 text-center">
-                    <a href="../assets/images/recruit/recruit.jpg" data-lightbox="APLY"><img
-                            src="../assets/images/recruit/recruit.jpg" alt="" border=0 style="width:70%;"></a>
-                </div>
-            </div>
+                </div>                
         </section>
 
         <section class="module" id="email-up">
@@ -256,6 +250,11 @@
             <div class="container">
 
                 <div class="row align-items-center">
+                    <div class="col-lg-4">
+                        <p class="m-b-30"><a href="../assets/images/recruit/a_36.jpg" data-lightbox="APLY"><img
+                                    src="../assets/images/recruit/a_36.jpg" alt="" border=0></a></p>
+                    </div>
+
                     <div class="col-lg-4">
                         <p class="m-b-30"><a href="../assets/images/recruit/a_35.jpg" data-lightbox="APLY"><img
                                     src="../assets/images/recruit/a_35.jpg" alt="" border=0></a></p>
@@ -472,10 +471,9 @@
                                 <div class="textwidget">
                                     <p>즐겁게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                     <p>
-                                        Office: 5F, 17-9, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
-                                        / 02751
+                                        6F, 24-21, Geumbit-ro, Paju-si, Gyeonggi-do, Republic of Korea / 02751
                                         <hr>
-                                        E-mail: <a href=mailto:contactus@aply.biz>recruit@aply.biz</a><br>                                        
+                                        <a href=mailto:contactus@aply.biz>recruit@aply.biz</a><br>                                        
                                         <select id="selSites" class="select"
                                             style="background-color: #333; color: #aaa; border-color: #888;"
                                             onChange="changedSelector">
