--- a/symbol/index.html
+++ b/symbol/index.html
@@ -179,6 +179,7 @@
                                     <div class="accordion-item-body">
                                         <p>- 소개:<BR>보다 진보된 기술로 증강현실 기반 전시/홍보/커뮤니케이션 플랫폼을 연구/개발하는 스타트업 입니다</p>
                                         <p>- 주요 제품 및 서비스:<BR>증강현실 기반 전시/홍보/커뮤니케이션 플랫폼</p>
+                                        <p>간편 송금 지원 서비스</p>
                                     </div>
                                 </div>
                             </div>
@@ -202,7 +203,10 @@
                                 <div class="collapse show" id="collapse-5" data-parent="#accordion5">
                                     <div class="accordion-item-body">
                                         <p>
-                                            ICT 기술에 익숙하지 않아도 증강현실 기반의 새로운 홍보 기술을 활용할 수 있도록 돕습니다.
+                                            - ICT 기술에 익숙하지 않아도 증강현실 기반의 새로운 홍보 기술을 활용할 수 있도록 돕습니다.
+                                        </p>
+                                        <p>
+                                            - 간편한 송금 지원 서비스를 제공하여 다양한 개인과 소상공인의 경제 활동을 돕습니다.
                                         </p>
                                     </div>
                                 </div>
@@ -224,6 +228,11 @@
                                     <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-4">서비스</a></h6>
                                 </div>
                                 <div class="collapse show" id="collapse-4" data-parent="#accordion4">
+                                    <div class="accordion-item-body">
+                                        <p>- <a href="https://aplx.aply.biz/aqr">AQR</a> : 간편 송금 지원 서비스<br>
+                                            번거로운 모바일 송금 절차를 간소화하여 다양한 경제활동을 돕는 서비스</p>
+                                    </div>
+
                                     <div class="accordion-item-body">
                                         <p>- <a href="https://aplx.aply.biz">어플엑스(APLX)</a> : 증강현실 기반 전시/홍보/커뮤니케이션 플랫폼<br>
                                             ICT 기술에 익숙하지 않아도 증강현실 기반의 새로운 홍보 기술을 활용할 수 있도록 돕는 플랫폼</p>
@@ -306,8 +315,8 @@
                                 </div>
                                 <div class="collapse show" id="collapse-6" data-parent="#accordion6">
                                     <div class="accordion-item-body">
-                                        <p>- 본사 한글: 02751 / 서울특별시 성북구 화랑로11길 17-9 5층 주식회사 어플라이</p>
-                                        <p>- 본사 영문: 02751 / APLY Inc. / 5F, 17-9, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea</p>
+                                        <p>- 본사 한글: 10915 / 경기도 파주시 금빛로 24-21, 6층 604호 주식회사 어플라이</p>
+                                        <p>- 본사 영문: 10915 / APLY Inc. / 6F, 24-21, Geumbit-ro, Paju-si, Gyeonggi-do, Republic of Korea</p>
                                         </p>
                                     </div>
                                 </div>
@@ -428,11 +437,27 @@
                                     <div class="accordion-item-body">
                                         <p>
                                         <div style="background:#eeeeee">
-                                            <img src=./images/280x123_1.png><br><br><img
-                                                src=./images/280x123_2_bgcolor.png><br><br><img
-                                                src=./images/280x123_3_logo_white.png><br><br><img
-                                                src=./images/280x280.png><br><br><img
-                                                src=./images/320x132.png><br><br><img src=./images/logo.png>
+                                            <img src=./images/280x123_1.png> <img
+                                                src=./images/280x123_2_bgcolor.png> <img
+                                                src=./images/280x123_3_logo_white.png> <img
+                                                src=./images/280x280.png> <img
+                                                src=./images/320x132.png> <img src=./images/logo.png>
+                                        </div>
+                                        </p>
+
+                                        <p>
+                                        <div style="background:#eeeeee">
+                                            <img src=./images/aplx_og_image.png> <img
+                                                src=./images/logo_aplx.png>
+                                        </div>
+                                        </p>
+
+                                        <p>
+                                        <div style="background:#eeeeee">
+                                            <img src=./images/aqr_og_image.png> 
+                                            <img src=./images/aqr_squre.png>
+                                            <img src=./images/aqr_squre2.png>
+                                            <img src=./images/aqr-android-chrome-256x256.png>
                                         </div>
                                         </p>
                                     </div>
@@ -450,18 +475,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h4>서울 본사</h4>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12643.838302172311!2d127.0410615!3d37.6031104!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x618142d4f5808743!2z6rO16rCE7Y-0652866as7Iqk!5e0!3m2!1sko!2skr!4v1646202636798!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""
+                        <h4>본사</h4>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d197.16406501490306!2d126.76789609132942!3d37.75193997258904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c8de5a3605b8f%3A0x2e35168624ee623a!2z67O0656M7ZSE65287J6Q!5e0!3m2!1sko!2skr!4v1672539521417!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""
                         aria-hidden="false" tabindex="0" loading="lazy"></iframe>
-                    </div>
-                    <!--
-                        <div class="col-md-6">
-		  	
-							  					<h4>제주 지사</h4>
-						   	  				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.273777395248!2d126.56928331478238!3d33.44217308077631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350cfdb398c3e257%3A0x35052b04c7b978ca!2z64Kt6re464qY!5e0!3m2!1sko!2skr!4v1595342743793!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-					              </div>
-					              
-					      -->
+                    </div>                   
                 </div>
                 <div class="row">
                     <div class="col-md-12">
@@ -491,11 +508,10 @@
                                 <div class="textwidget">
                                     <p>즐겁게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                     <p>
-                                        Office: 5F, 17-9, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
-                                        / 02751
+                                        10915 / APLY Inc. / 6F, 24-21, Geumbit-ro, Paju-si, Gyeonggi-do, Republic of Korea
                                         <hr>
-                                        E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
-                                        Phone: +82-2-6956-0801
+                                        <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
+                                        +82-2-6956-0801
                                     </p>
                                     <ul class="social-icons">
                                         <li><a href="https://www.instagram.com/aplyplatform"><i
