--- a/symbol/index.html
+++ b/symbol/index.html
@@ -342,7 +342,6 @@
                                     <div class="accordion-item-body">
                                         <p>
                                         <div>
-
                                             <form role="form" id="namecard">
                                                 <div class="row">
                                                     <div class="col-lg-6">
@@ -410,9 +409,15 @@
                                             </form>
 
                                         </div>
-
-
-
+                                        </p>
+                                        <p>
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    <button class="btn" id="sign_copy_btn" data-clipboard-text="TEST">
+                                                       서명 복사하기
+                                                    </button>
+                                                </div>
+                                            </div>
                                         </p>
                                     </div>
                                 </div>
@@ -597,13 +602,14 @@
     <!-- To top button--><a class="scroll-top" href="#top"><i class="fas fa-angle-up"></i></a>
 
     <!-- Scripts-->
-    <script src="../assets/js/custom/jquery-3.2.1.min.js"></script>
+    <script src="../assets/js/custom/jquery.min.js"></script>
     <script src="../assets/js/custom/popper.min.js"></script>
     <script src="../assets/js/bootstrap/bootstrap.min.js"></script>
     <script src="../assets/js/custom/plugins.min.js"></script>
     <script src="../assets/js/custom/custom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="../assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>
+    <script src="../assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>    
+    <script src="./js/clipboard.min.js"></script>
     <script src="./js/aply_sign.js"></script>
     <script>
         anime.timeline({ loop: false })
@@ -615,9 +621,6 @@
                 duration: 800,
                 delay: function (el, i) { 1500 * i }
             });
-
-
-
         $(document).ready(function () {
             jQuery('[data-youtube]').youtube_background();
             setSign();
