--- a/recruit/index.html
+++ b/recruit/index.html
@@ -478,22 +478,13 @@
                                             style="background-color: #333; color: #aaa; border-color: #888;"
                                             onChange="changedSelector">
                                             <option selected>Family site</option>
-                                            <option>-------------------------------------</option>
-                                            <option value="aplx">APLX</option>
-                                            <option value="kiosk">R&D KIOSK</option>
-                                            <option value="polaris">POLARIS</option>
-                                            <option value="catchme">CATCHME</option>
-                                            <!--
-                                            <option value="dkdk">DKDK</option>
-                                            <option>-------------------------------------</option>
-                                            <option value="duni">DUNI</option>
-                                            <option value="dunipilot">DUNI PILOT CENTER</option>
-                                            <option value="dunistock">DUNI STOCK</option>
-                                            <option value="dromi">DROMI</option>
-                                            <option value="drdr">DRDR</option>
                                             <option>-------------------------------------</option>                                            
                                             <option value="blog">BLOG</option>
-                                            -->
+                                            <option>-------------------------------------</option>
+                                            <option value="aqr">AQR</option>
+                                            <option value="aplx">APLX</option>
+                                            <option value="kiosk">R&D KIOSK</option>
+                                            <option value="catchme">CATCHME</option>
                                         </select>
                                     </p>
                                     <ul class="social-icons">
