리크루트 페이지 링크 수정, 문구 수정

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -469,7 +469,7 @@
                                     </a>
                                 </div>
                                 <div class="textwidget">
-                                    <p>즐겁게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
+                                    <p>즐겁게 일하는 진보된 플랫폼</p>
                                     <p>
                                         6F, 24-21, Geumbit-ro, Paju-si, Gyeonggi-do, Republic of Korea / 02751
                                         <hr>
@@ -522,12 +522,13 @@
                                     <li><a href="https://aplx.aply.biz/?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
                                         target=_new><img src="../assets/images/widgets/7.png" alt="APLX"
                                             style="width:45px;"></a></li>
-                                    <li><a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><B>R&D KIOSK</B></a></li>
+                                    <li><a href="https://aplx.aply.biz/aqr?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><img src="../assets/images/widgets/9.png" alt="AQR"
+                                            style="width:45px;"></a></li>                                    
                                 </ul>
                                 <ul>
-                                    <li><a href="https://polaris.aply.biz?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target=_new>P O L A R I S</a></li>
+                                    <li><a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><B>R&D KIOSK</B></a></li>                                    
                                     <li><a href="https://catchme.aply.biz/?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
                                         target=_new><img src="../assets/images/widgets/6.png" alt="캐치미"
                                             style="width:45px;"></a></li>
@@ -682,11 +683,7 @@
                         <tr>
                             <td>성명(직책)</td>
                             <td>이건우(대표)</td>
-                        </tr>
-                        <tr>
-                            <td>전화번호</td>
-                            <td>02-6956-0801</td>
-                        </tr>
+                        </tr>                        
                         <tr>
                             <td>이메일</td>
                             <td> contactus@aply.biz</td>
@@ -701,11 +698,7 @@
                         <tr>
                             <td>담당자</td>
                             <td> 이건우</td>
-                        </tr>
-                        <tr>
-                            <td>전화번호</td>
-                            <td>02-6956-0801</td>
-                        </tr>
+                        </tr>                        
                         <tr>
                             <td>이메일</td>
                             <td> contactus@aply.biz</td>
