--- a/recruit/index.html
+++ b/recruit/index.html
@@ -744,7 +744,7 @@
     <script src="../assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/js/lightbox.min.js"></script>
-    <script src="./js/handler.js"></script>
+    <script src="./js/handler.js?v=20230121"></script>
     <script>
 
         $(document).ready(function (e) {
