Changed width AQR logo in portfolio

--- a/index.html
+++ b/index.html
@@ -1055,8 +1055,8 @@
                                         target=_new><img src="assets/images/widgets/7.png" alt="APLX"
                                             style="width:45px;"></a></li>
                                     <li><a href="https://aplx.aply.biz/aqr?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target=_new><img src="assets/images/widgets/9.png" alt="APLX"
-                                            style="width:45px;"></a></li>                                    
+                                        target=_new><img src="assets/images/widgets/9.png" alt="AQR"
+                                            style="width:33px;"></a></li>
                                 </ul>
                                 <ul>
                                     <li><a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
