타이틀 효과 변경

--- a/index.html
+++ b/index.html
@@ -127,27 +127,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h4>
-                            <span class="title_text"></span><span class="blinking-cursor">_</span>
-                        </h4>
+                        <span class="anitext">
+                            ADVANCED PLATFORM TO FLY
+                        </span>                        
                     </div>
                 </div>
             </div>
         </section>
         <!-- Hero end-->
 
-        <!-- Features-->
-        <section class="module bg-white text-center">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-12 m-auto text-center">
-                        <h4><b>즐겁게 일하는 진보된 플랫폼 : 어플라이<span class="blinking-cursor">_</span></b></h4>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        
         <!-- Modal-->
         <section class="module divider-top" id="data_t">
             <div class="container">
