--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Plugins-->
     <link href="assets/css/plugins.min.css" rel="stylesheet">
     <!-- Template core CSS-->
-    <link href="assets/css/template.css" rel="stylesheet">
+    <link href="assets/css/template.css?v=20230124" rel="stylesheet">
 </head>
 
 <body>
